--- a/client/views/user.ejs
+++ b/client/views/user.ejs
@@ -29,7 +29,7 @@
           <p><%= chat.latest_sender_id == user.id ? 'You: ' : '' %><%= chat.latest_message %></p>
         </div>
       </div>
-      <div class="status-dot"><i class="fas fa-circle"></i></div>
+      <div class="status-dot"><img src="/img/circle-solid.svg" alt=""></i></div>
     </a>
     <% }) %>
     <!-- else close -->
