--- a/client/views/user.ejs
+++ b/client/views/user.ejs
@@ -12,8 +12,9 @@
 
   <div class="search">
     <span class="text">Chatting with</span>
-    <!-- <input type="text" placeholder="Enter name to search..." />
-    <button><i class="fas fa-search"></i></button> -->
+    <!-- <button class="text">Search User</button> -->
+    <input type="text" placeholder="Enter name to search..." />
+    <button><img src="/img/magnifying-glass-solid.svg" alt=""></button>
   </div>
   <div class="users-list has-chat">
     <% if (chats.hasChat.length == 0) { %>
