--- a/client/views/user.ejs
+++ b/client/views/user.ejs
@@ -14,7 +14,7 @@
     <span class="text">Chatting with</span>
     <!-- <button class="text">Search User</button> -->
     <input type="text" placeholder="Enter name to search..." />
-    <button><img src="/img/magnifying-glass-solid.svg" alt=""></button>
+    <button><img src="/img/magnifying-glass-solid.svg" alt="" /></button>
   </div>
   <div class="users-list has-chat">
     <% if (chats.hasChat.length == 0) { %>
@@ -22,7 +22,11 @@
     <% } else { %>
     <!-- else -->
     <% chats.hasChat.forEach(chat => { %>
-    <a href="/chat/<%= chat.room_id %>" data-roomid="<%= chat.room_id %>">
+    <a
+      href="/chat/<%= chat.room_id %>"
+      data-roomid="<%= chat.room_id %>"
+      data-roomuserid="<%= chat.user_id %>"
+    >
       <div class="content">
         <img src="/uploads/<%= chat.user_avatar %>" alt="" />
         <div class="details">
@@ -30,7 +34,7 @@
           <p><%= chat.latest_sender_id == user.id ? 'You: ' : '' %><%= chat.latest_message %></p>
         </div>
       </div>
-      <div class="status-dot"><img src="/img/circle-solid.svg" alt=""></i></div>
+      <div class="status-dot"><img src="/img/circle-solid.svg" alt="" /></div>
     </a>
     <% }) %>
     <!-- else close -->
@@ -54,7 +58,7 @@
           <span><%= user.name %></span>
         </div>
       </div>
-      <div class="status-dot"><i class="fas fa-circle"></i></div>
+      <!-- <div class="status-dot"><i class="fas fa-circle"></i></div> -->
     </a>
     <% }) %>
     <!-- else close -->
@@ -68,13 +72,6 @@
   let userId = Number('<%= user.id %>');
   let userName = '<%= user.name %>';
 
-  function getRoomIdsFromRoomElems(roomElems) {
-    return [...roomElems].reduce((arr, e) => {
-      arr.push(Number(e.dataset.roomid));
-      return arr;
-    }, []);
-  }
-
   (async () => {
     /*
     |-----------------------------------------------------------------------------
@@ -84,7 +81,7 @@
     const socket = io(location.origin);
 
     socket.on('connect', () => {
-      let socketRooms = getRoomIdsFromRoomElems(roomElems).map((id) => 'room_' + id);
+      let socketRooms = [...roomElems].map((e) => 'room_' + Number(e.dataset.roomid));
       socket.emit('__:init', { userId: userId, userName: userName });
       socket.emit('__:user_init_rooms', { socketRooms });
     });
@@ -92,6 +89,11 @@
     socket.on('user:online', (data) => {
       console.log('on user:online');
       console.log(`${data.userName} is online (logged in)`);
+      let onlineUserRoom = [...roomElems].find((e) => Number(e.dataset.roomuserid) == data.userId);
+      if (!onlineUserRoom) return;
+
+      let status = onlineUserRoom.querySelector('.status-dot');
+      status.classList.add('online');
     });
 
     socket.on('user:offline', (data) => {
