--- a/client/views/user.ejs
+++ b/client/views/user.ejs
@@ -89,17 +89,21 @@
     socket.on('user:online', (data) => {
       console.log('on user:online');
       console.log(`${data.userName} is online (logged in)`);
-      let onlineUserRoom = [...roomElems].find((e) => Number(e.dataset.roomuserid) == data.userId);
-      if (!onlineUserRoom) return;
+      let userRoom = [...roomElems].find((e) => Number(e.dataset.roomuserid) == data.userId);
+      if (!userRoom) return;
 
-      let status = onlineUserRoom.querySelector('.status-dot');
+      let status = userRoom.querySelector('.status-dot');
       status.classList.add('online');
     });
 
     socket.on('user:offline', (data) => {
-      console.log(data);
       console.log('on user:offline');
       console.log(`${data.userName} is offline`);
+      let userRoom = [...roomElems].find((e) => Number(e.dataset.roomuserid) == data.userId);
+      if (!userRoom) return;
+
+      let status = userRoom.querySelector('.status-dot');
+      status.classList.remove('online');
     });
 
     socket.on('chat:new_message', (data) => {
