new chat open url in current tab not new tab

--- a/client/views/user.ejs
+++ b/client/views/user.ejs
@@ -132,7 +132,7 @@
           return alert(res.msg);
         }
         const chatUrl = `/chat/${res.roomid}`;
-        window.open(chatUrl);
+        location.href = chatUrl;
       })
     );
 
