--- a/app/views/chat.ejs
+++ b/app/views/chat.ejs
@@ -33,11 +33,7 @@
   </div>
   <input type="hidden" id="__roomid" value="<%= room.id %>" />
   <input type="hidden" id="__partnerid" value="<%= partner.id %>" />
-  <input
-    type="hidden"
-    id="__last_message_id"
-    value="<%= messages.length == 0 ? 0 : messages.at(-1).id %>"
-  />
+  <input type="hidden" id="__last_message_id" value="<%= messages.length == 0 ? 0 : messages.at(-1).id %>" />
   <div class="typing-area">
     <input id="message" type="text" placeholder="Type a message here..." />
     <button type="button" id="send_message">
@@ -115,7 +111,7 @@
     }
 
     async function postMessage(roomid, message) {
-      const fetchPostMessage = await fetch(`/chat/message`, {
+      const fetchPostMessage = await fetch(`/room/message`, {
         headers: {
           'Content-Type': 'application/json',
         },
@@ -130,7 +126,7 @@
     }
 
     async function getLatestMessage(roomid, lastMessageId) {
-      const fetchPostMessage = await fetch(`/chat/${roomid}/latestMessage/${lastMessageId}`);
+      const fetchPostMessage = await fetch(`/room/${roomid}/latestMessage/${lastMessageId}`);
       const res = await fetchPostMessage.json();
       return res;
     }
